# CroixPharmacie

./: .gitignore  README.md  Sandfall.webm  audio_visualizer.py  doom.py  example.py  falling_sand_simulation.py  game_of_life.py  maze.py  pharma_game.py  pharmacontroller.py  plasma.py  pong.py  pyproject.toml  requirements.txt  rotozoom.py  simon.py  snake.py  tetris.py  textwriter.py  videoplayer.py  visual_effects.py  youreundercontrol.py
src/: cube.py  doom.py  flappyBird.py  plasma.py  pong.py  rotozoom.py  snake.py  videoplayer.py
src/croix_pharmacie/: asset_helper.py  textwriter.py
src/croix_pharmacie/assets/: letters.json
src/croix_pharmacie/scripts/: audio_visualizer.py  cube.py  doom.py  example.py  falling_sand_simulation.py  flappyBird.py  plasma.py  pong.py  rotozoom.py  simon.py  snake.py  tetris.py  videoplayer.py  visual_effects.py  youreundercontrol.py
